Apply recipe best practices and add Prethink workaround to CI
Add @Value/@EqualsAndHashCode for recipe deduplication, replace
Paths.get() with Path.of(), and tighten custom.properties path
matching. Add CI workaround for Prethink multi-cycle delete bug.